adds the new shader compiler class as a cpp source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(asg3 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(glitch hello-ndk/hello.c)
+add_executable(glitch_ndk hello-ndk/hello.c)
