--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -4,7 +4,7 @@ project(glitch)
 # Defs
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
 set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libraries")
-set(SOURCES "${SRC_DIR}/main.c")
+set(SOURCES "${SRC_DIR}/shader.cpp" "${SRC_DIR}/main.cpp")
 
 # Executable definition and properties
 add_executable(${PROJECT_NAME} ${SOURCES})
