adds final code for finding huge chunks of memroy from ndk code

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,22 +19,11 @@
     "password": "123123",
     "port": "22",
     
-    "remote_path": "/home/ppp1712/glitch/hello-ndk",
+    "remote_path": "/home/ppp1712/glitch",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
         "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini"
     ],
-    //"file_permissions": "664",
-    //"dir_permissions": "775",
-    
-    //"extra_list_connections": 0,
-
     "connect_timeout": 30,
-    //"keepalive": 120,
-    //"ftp_passive_mode": true,
-    //"ftp_obey_passive_host": false,
-    //"ssh_key_file": "~/.ssh/id_rsa",
-    //"sftp_flags": ["-F", "/path/to/ssh_config"],
-    
 }
